# ChangeLog for sys-libs/com_err
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.73 2008/06/12 18:55:56 klausman Exp $

  12 Jun 2008; Tobias Klausmann <klausman@gentoo.org> com_err-1.40.9.ebuild:
  Stable on alpha, bug #225239, thanks to Matt Turner for testing

  09 Jun 2008; Brent Baude <ranger@gentoo.org> com_err-1.40.9.ebuild:
  Marking com_err-1.40.9 ppc64 for bug 225239

  09 Jun 2008; Raúl Porcel <armin76@gentoo.org> com_err-1.40.9.ebuild:
  ia64/sparc/x86 stable wrt #225239

  08 Jun 2008; nixnut <nixnut@gentoo.org> com_err-1.40.9.ebuild:
  Stable on ppc wrt bug 225239

  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.9.ebuild:
  Stable for HPPA (bug #225239).

*com_err-1.40.10 (07 Jun 2008)

  07 Jun 2008; Mike Frysinger <vapier@gentoo.org> +com_err-1.40.10.ebuild:
  Version bump #225161 by Krzysztof Olędzki.

  26 May 2008; Raúl Porcel <armin76@gentoo.org> com_err-1.40.8.ebuild:
  ia64 stable wrt #213588

  01 May 2008; Markus Meier <maekke@gentoo.org> com_err-1.40.8.ebuild:
  amd64/x86 stable, bug #213588

  30 Apr 2008; Tobias Klausmann <klausman@gentoo.org> com_err-1.40.8.ebuild:
  Stable on alpha, bug #213588

  27 Apr 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.8.ebuild:
  Stable for HPPA (bug #213588).

*com_err-1.40.9 (27 Apr 2008)

  27 Apr 2008; Mike Frysinger <vapier@gentoo.org> +com_err-1.40.9.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.6.ebuild:
  Stable for HPPA too.

  17 Mar 2008; Christian Heim <phreak@gentoo.org> com_err-1.40.4.ebuild:
  com_err-1.40.4 also needs tls disabled on uClibc.

  17 Mar 2008; Christian Heim <phreak@gentoo.org> com_err-1.40.6.ebuild,
  com_err-1.40.8.ebuild:
  Disable tls support if we're using uClibc (#213223 by Sergey Dryabzhinsky).

  16 Mar 2008; Samuli Suominen <drac@gentoo.org> com_err-1.40.6.ebuild:
  amd64 stable
