@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.73 2008/06/12 18:55:56 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.74 2008/06/14 10:10:16 angelos Exp $
+
+  14 Jun 2008; Christoph Mende <angelos@gentoo.org> com_err-1.40.9.ebuild:
+  Stable on amd64, bug #225239
 
   12 Jun 2008; Tobias Klausmann <klausman@gentoo.org> com_err-1.40.9.ebuild:
   Stable on alpha, bug #225239, thanks to Matt Turner for testing
